tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960326_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/960326-1.c" (c, x86_64-unknown-linux-gnu)
global s : rec_s = {0, 3, 0, [2]} [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @s : rec_s*
        %6 = get_member %5[1] "b" : s32i*
        %7 = load %6 : s32i, align 4
        %8 = const 3 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
