tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960327_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/960327-1.c" (c, x86_64-unknown-linux-gnu)
global __const.f.s : s8i[14] = "abcedfg012345" [cir_private, default, dso_local, constant]
global .str : s8i[2] = "X" [cir_private, default, align 1, dso_local, constant]

fn g() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %33 = alloca s32i, "__retval", align 4
    %34 = const 10 : s32i
    store %34, %33
    %35 = load %33 : s32i
    return %35
}
fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn f() -> void [external, c, no_inline, dso_local, nothrow] {
    %5 = alloca s8i[14], "s", align 1
    %6 = alloca s8i*, "sp", align 8
    %7 = get_global @__const.f.s : s8i[14]*
    copy %5, %7
    %8 = cast(array_to_ptrdecay) %5 : s8i*
    %9 = const 12 : s32i
    %10 = ptr_stride %8, %9 : s8i*
    store %10, %6, align 8
    scope {
        %32 = call @g() : s32i [all]
        switch %32 {
            case equal 10 {
                break
            }
        }
        yield
    }
    scope {
        while {
            %25 = load %6 : s8i*, align 8
            %26 = const -1 : s32i
            %27 = ptr_stride %25, %26 : s8i*
            store %27, %6, align 8
            %28 = load %27 : s8i, align 1
            %29 = cast(integral) %28 : s32i
            %30 = const 48 : s32i
            %31 = cmp eq %29, %30 : bool
            condition %31
        } do {
            yield
        }
        yield
    }
    %11 = get_global @sprintf : ((s8i*, s8i*, ...) -> s32i)*
    %12 = load %6 : s8i*, align 8
    %13 = const 1 : s32i
    %14 = ptr_stride %12, %13 : s8i*
    %15 = get_global @.str : s8i[2]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = call @sprintf(%14, %16) : s32i [all]
    scope {
        %18 = const 12 : s64i
        %19 = get_element %5[%18] : s8i*
        %20 = load %19 : s8i, align 1
        %21 = cast(integral) %20 : s32i
        %22 = const 88 : s32i
        %23 = cmp ne %21, %22 : bool
        if %23 {
            %24 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @f() [all]
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
