tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960405_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/960405-1.c" (c, x86_64-unknown-linux-gnu)
global x : long_double<f80> = 0x7FFF8000000000000000 [external, default, align 16, dso_local]
global y : long_double<f80> = 0x7FFF8000000000000000 [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @x : long_double<f80>*
        %6 = load %5 : long_double<f80>, align 16
        %7 = get_global @y : long_double<f80>*
        %8 = load %7 : long_double<f80>, align 16
        %9 = cmp ne %6, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
